--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
     "name": "BrowserQuest"
   , "version": "0.0.1"
   , "private": false 
+  , "scripts": {
+      "start": "node start.js",
+      "client": "node client.js"
+  }
   , "dependencies": {
-    "underscore": ">0"
-    , "log": ">0"
-    , "bison": ">0"
-    , "websocket": ">0"
-    , "websocket-server": ">0"
-    , "sanitizer": ">0"
-    , "memcache": ">0"
+    "underscore": "1.13.6"
+    , "log": "1.4.0"
+    , "bison": "1.1.1"
+    , "websocket": "1.0.34"
+    , "ws": "8.13.0"
+    , "sanitizer": "0.1.3"
   }
 }
